[gd_scene load_steps=6 format=3 uid="uid://bv27iiv00pfo2"]

[ext_resource type="Script" path="res://scripts/generics/generic_ingredient.gd" id="1_cj654"]
[ext_resource type="Texture2D" uid="uid://c1wnvdhh7i811" path="res://art/ingredient/tooth_fairy_molar.png" id="2_nprcq"]
[ext_resource type="AudioStream" uid="uid://s6aie3bipc10" path="res://assets/mp3s/splash-6213.mp3" id="3_bwl0n"]
[ext_resource type="AudioStream" uid="uid://b0rk3c76i05xu" path="res://assets/mp3s/grab1.mp3" id="4_0dih2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_12p7k"]
radius = 9.35195
height = 38.4188

[node name="tooth" type="Node2D"]
script = ExtResource("1_cj654")
id = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.163, 0.163)
texture = ExtResource("2_nprcq")

[node name="Area2D" type="Area2D" parent="." groups=["ingredients"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(2.45938, -1.66585)
shape = SubResource("CapsuleShape2D_12p7k")

[node name="splash_AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_bwl0n")
bus = &"sfx"

[node name="grab_AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_0dih2")
bus = &"sfx"

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
